@@ -19,6 +19,7 @@ package com.google.snippet.wifi;
 import static android.net.wifi.DeauthenticationReasonCode.REASON_UNKNOWN;
 
 import static java.util.concurrent.TimeUnit.SECONDS;
+import static java.util.stream.Collectors.joining;
 
 import android.content.BroadcastReceiver;
 import android.content.Context;
@@ -28,6 +29,7 @@ import android.net.ConnectivityManager;
 import android.net.NetworkInfo;
 import android.net.NetworkInfo.DetailedState;
 import android.net.wifi.ScanResult;
+import android.net.wifi.SoftApCapability;
 import android.net.wifi.SoftApConfiguration;
 import android.net.wifi.SoftApInfo;
 import android.net.wifi.SupplicantState;
@@ -35,8 +37,10 @@ import android.net.wifi.WifiClient;
 import android.net.wifi.WifiConfiguration;
 import android.net.wifi.WifiInfo;
 import android.net.wifi.WifiManager;
+import android.net.wifi.WifiNetworkSuggestion;
 import android.net.wifi.WifiScanner;
 import android.net.wifi.WifiScanner.ScanData;
+import android.os.Bundle;
 import android.os.Handler;
 import android.os.HandlerThread;
 import android.os.SystemClock;
@@ -56,8 +60,11 @@ import com.google.android.mobly.snippet.event.EventCache;
 import com.google.android.mobly.snippet.event.SnippetEvent;
 import com.google.android.mobly.snippet.rpc.AsyncRpc;
 import com.google.android.mobly.snippet.rpc.Rpc;
+import com.google.snippet.wifi.aware.WifiAwareJsonDeserializer;
+import com.google.snippet.wifi.aware.WifiAwareSnippetConverter;
 import com.google.snippet.wifi.softap.WifiSapJsonDeserializer;
 
+import org.json.JSONArray;
 import org.json.JSONException;
 import org.json.JSONObject;
 
@@ -66,8 +73,11 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 
 /**
@@ -78,20 +88,35 @@ public class WifiManagerSnippet extends WifiShellPermissionSnippet implements Sn
     private static final String TAG = "WifiManagerSnippet";
     private static final long POLLING_TIMEOUT_MS = TimeUnit.SECONDS.toMillis(10);
     private static final int CONNECT_TIMEOUT_IN_SEC = 90;
+    private static final int TOGGLE_STATE_TIMEOUT_IN_SEC = 30;
+    // Network Suggestions
+    private static final String EVENT_KEY_CB_NAME = "CallbackName";
+    private static final String EVENT_KEY_CONNECTION_STATUS = "ConnectionStatus";
+    private static final String EVENT_KEY_USER_APPROVAL_STATUS = "UserApprovalStatus";
+    private static final String EVENT_KEY_SUGGESTION = "Suggestion";
 
     private final Context mContext;
     private final WifiManager mWifiManager;
+    private final ConnectivityManager mConnectivityManager;
     private final Handler mHandler;
     private final Object mLock = new Object();
     private WifiManagerSnippet.SnippetSoftApCallback mSoftApCallback;
     private WifiManager.LocalOnlyHotspotReservation mLocalOnlyHotspotReservation;
     private BroadcastReceiver mWifiStateReceiver;
+    private WifiManager.SuggestionConnectionStatusListener mSuggestionConnectionStatusListener;
+    private WifiManager.SuggestionUserApprovalStatusListener mSuggestionUserApprovalStatusListener;
+    private BroadcastReceiver mNetworkSuggestionPostConnectionReceiver;
+    private volatile boolean mIsScanResultAvailable = false;
+
 
     /**
      * Callback to listen in and verify events to SoftAp.
      */
     private static class SnippetSoftApCallback implements WifiManager.SoftApCallback {
         private final String mCallbackId;
+        private int mConnectedClientsCount = 0;
+        private final List<SoftApInfo> mAllSoftApInfoList = new ArrayList<>();
+        private final List<Integer> mStateList = new ArrayList<>();
 
         SnippetSoftApCallback(String callbackId) {
             mCallbackId = callbackId;
@@ -102,11 +127,12 @@ public class WifiManagerSnippet extends WifiShellPermissionSnippet implements Sn
                 @NonNull List<WifiClient> clients) {
             Log.d(TAG, "onConnectedClientsChanged, info=" + info + ", clients=" + clients);
             SnippetEvent event = new SnippetEvent(mCallbackId, "onConnectedClientsChanged");
-            event.getData().putInt("connectedClientsCount", clients.size());
+            mConnectedClientsCount = clients.size();
+            event.getData().putInt("connectedClientsCount", mConnectedClientsCount);
             String macAddress = null;
             if (!clients.isEmpty()) {
                 // In our Mobly test cases, there is only ever one other device.
-                WifiClient client = clients.getFirst();
+                WifiClient client = clients.get(0);
                 macAddress = client.getMacAddress().toString();
             }
             event.getData().putString("clientMacAddress", macAddress);
@@ -123,7 +149,7 @@ public class WifiManagerSnippet extends WifiShellPermissionSnippet implements Sn
             int disconnectReason = REASON_UNKNOWN;
             if (!clients.isEmpty()) {
                 // In our Mobly test cases, there is only ever one other device.
-                WifiClient client = clients.getFirst();
+                WifiClient client = clients.get(0);
                 macAddress = client.getMacAddress().toString();
                 disconnectReason = client.getDisconnectReason();
             }
@@ -131,6 +157,116 @@ public class WifiManagerSnippet extends WifiShellPermissionSnippet implements Sn
             event.getData().putInt("clientDisconnectReason", disconnectReason);
             EventCache.getInstance().postEvent(event);
         }
+
+        @Override
+        public void onStateChanged(int state, int failureReason) {
+            SnippetEvent event = new SnippetEvent(mCallbackId, "onStateChanged");
+            Log.d(TAG,
+                    "SoftApCallback - onStateChanged, state "
+                    + state + ", failureReason " + failureReason);
+            mStateList.add(state);
+            Bundle msg = new Bundle();
+            msg.putInt("State", state);
+            msg.putInt("FailureReason", failureReason);
+            event.getData().putBundle("onStateChanged", msg);
+            EventCache.getInstance().postEvent(event);
+        }
+
+        @Override
+        public void onInfoChanged(List<SoftApInfo> softApInfoList) {
+            SnippetEvent event = new SnippetEvent(mCallbackId, "onInfoChanged");
+            String softApInfoString = softApInfoList.stream().map(
+                    SoftApInfo::toString).collect(joining(", "));
+            Pattern frequencyPattern = Pattern.compile("frequency=\\s*(\\d+)");
+            Pattern bandwidthPattern = Pattern.compile("bandwidth=\\s*(\\d+)");
+            Pattern macAddressPattern = Pattern.compile("mMldAddress\\s*=\\s*([0-9a-fA-F:]{17})");
+            Matcher frequencyMatcher = frequencyPattern.matcher(softApInfoString);
+            Matcher bandwidthMatcher = bandwidthPattern.matcher(softApInfoString);
+            Matcher macAddresshMatcher = macAddressPattern.matcher(softApInfoString);
+            int frequency = 0;
+            int bandwidth = 0;
+            String macAddress = null;
+            if (frequencyMatcher.find()) {
+                frequency = Integer.parseInt(frequencyMatcher.group(1));
+            }
+            if (bandwidthMatcher.find()) {
+                bandwidth = Integer.parseInt(bandwidthMatcher.group(1));
+            }
+            if (macAddresshMatcher.find()) {
+                macAddress = macAddresshMatcher.group(1);
+            }
+            this.mAllSoftApInfoList.clear();
+            this.mAllSoftApInfoList.addAll(softApInfoList);
+
+            Log.d(TAG,
+                    "SoftApCallback - onInfoChanged, size "
+                    + this.mAllSoftApInfoList.size()
+                    + ", info "
+                    + softApInfoList.stream().map(SoftApInfo::toString).collect(joining(", ")));
+            event.getData().putInt("frequency", frequency);
+            event.getData().putInt("bandwidth", bandwidth);
+            event.getData().putString("clientMacAddress", macAddress);
+            event.getData().putInt("connectedClientsCount", this.mAllSoftApInfoList.size());
+            EventCache.getInstance().postEvent(event);
+        }
+
+        @Override
+        public void onCapabilityChanged(SoftApCapability softApCapability) {
+            SnippetEvent event = new SnippetEvent(mCallbackId, "OnCapabilityChanged");
+            event.getData().putBoolean("clientForceDisconnectSupported",
+                    softApCapability.areFeaturesSupported(
+                        softApCapability.SOFTAP_FEATURE_CLIENT_FORCE_DISCONNECT));
+            Log.d(TAG,
+                    "SoftApCallback - onCapabilityChanged, softApCapability " + softApCapability);
+            event.getData().putInt("MaximumSupportedClientNumber",
+                    softApCapability.getMaxSupportedClients());
+            event.getData().putIntArray("SupportedChannelListIn24g",
+                    softApCapability.getSupportedChannelList(SoftApConfiguration.BAND_2GHZ));
+            event.getData().putIntArray("SupportedChannelListIn5g",
+                    softApCapability.getSupportedChannelList(SoftApConfiguration.BAND_5GHZ));
+            event.getData().putIntArray("SupportedChannelListIn6g",
+                    softApCapability.getSupportedChannelList(SoftApConfiguration.BAND_6GHZ));
+            event.getData().putIntArray("SupportedChannelListIn60g",
+                    softApCapability.getSupportedChannelList(SoftApConfiguration.BAND_60GHZ));
+            EventCache.getInstance().postEvent(event);
+        }
+
+        @Override
+        public void onBlockedClientConnecting(WifiClient client, int blockedReason) {
+            SnippetEvent event = new SnippetEvent(mCallbackId, "OnBlockedClientConnecting");
+
+            Log.d(TAG,
+                    "SoftApCallback - onBlockedClientConnecting, client "
+                    + client
+                    + ", blockedReason "
+                    + blockedReason);
+            event.getData().putString("WifiClient", client.getMacAddress().toString());
+            event.getData().putInt("BlockedReason", blockedReason);
+            EventCache.getInstance().postEvent(event);
+        }
+
+        /**
+        * Gets the number of connected clients.
+        *
+        * @return the number of connected clients
+        */
+        public int getConnectedClientsCount() {
+            return this.mConnectedClientsCount;
+        }
+    }
+
+    /**
+   * Gets the number of connected clients.
+   *
+   * @throws WifiManagerSnippetException if softApCallback is not registered
+   * @return the number of connected clients
+   */
+    @Rpc(description = "Get the number of connected clients.")
+    public int wifiGetSoftApConnectedClientsCount() throws WifiManagerSnippetException {
+        if (mSoftApCallback == null) {
+            throw new WifiManagerSnippetException("SoftApCallback is not registered.", null);
+        }
+        return mSoftApCallback.getConnectedClientsCount();
     }
 
     /**
@@ -161,9 +297,85 @@ public class WifiManagerSnippet extends WifiShellPermissionSnippet implements Sn
         }
     }
 
+    /**
+     * Listener for Wi-Fi Network Suggestion connection status updates.
+     */
+    private class SuggestionConnectionStatusListener implements
+            WifiManager.SuggestionConnectionStatusListener{
+        private final String mCallbackId;
+
+        SuggestionConnectionStatusListener(String callbackId) {
+            mCallbackId = callbackId;
+        }
+
+        @Override
+        public void onConnectionStatus(@NonNull WifiNetworkSuggestion suggestion, int status) {
+            Log.d(TAG, "onConnectionStatus, suggestion=" + suggestion.getSsid() + ", status="
+                    + status);
+            SnippetEvent event = new SnippetEvent(mCallbackId, "onConnectionStatus");
+            event.getData().putInt(EVENT_KEY_CONNECTION_STATUS, status);
+            try {
+                event.getData().putString(EVENT_KEY_SUGGESTION,
+                        WifiJsonConverter.serializeWifiNetworkSuggestion(suggestion).toString());
+            } catch (JSONException e) {
+                Log.e(TAG, "Failed to serialize WifiNetworkSuggestion", e);
+            }
+            EventCache.getInstance().postEvent(event);
+        }
+    }
+
+    /**
+     * Listener for Wi-Fi Network Suggestion user approval status updates.
+     */
+    private class SuggestionUserApprovalStatusListener implements
+            WifiManager.SuggestionUserApprovalStatusListener {
+        private final String mCallbackId;
+        SuggestionUserApprovalStatusListener(String callbackId) {
+            mCallbackId = callbackId;
+        }
+
+        @Override
+        public void onUserApprovalStatusChange(int approvalStatus) {
+            Log.d(TAG, "onUserApprovalStatusChange: approvalStatus=" + approvalStatus);
+            SnippetEvent event = new SnippetEvent(mCallbackId, "onUserApprovalStatusChange");
+            event.getData().putInt(EVENT_KEY_USER_APPROVAL_STATUS, approvalStatus);
+            EventCache.getInstance().postEvent(event);
+        }
+    }
+
+    /**
+     * BroadcastReceiver for ACTION_WIFI_NETWORK_SUGGESTION_POST_CONNECTION.
+     */
+    private class NetworkSuggestionPostConnectionReceiver extends BroadcastReceiver {
+        private final String mCallbackId;
+        private final EventCache mEventCache = EventCache.getInstance();
+
+        NetworkSuggestionPostConnectionReceiver(String callbackId) {
+            this.mCallbackId = callbackId;
+        }
+
+        @Override
+        public void onReceive(Context ctx, Intent intent) {
+            String action = intent.getAction();
+            if (WifiManager.ACTION_WIFI_NETWORK_SUGGESTION_POST_CONNECTION.equals(action)) {
+                Log.d(TAG, "Received ACTION_WIFI_NETWORK_SUGGESTION_POST_CONNECTION broadcast.");
+                SnippetEvent event = new SnippetEvent(mCallbackId, action);
+                NetworkInfo networkInfo = intent.getParcelableExtra(WifiManager.EXTRA_NETWORK_INFO);
+
+                if (networkInfo != null) {
+                    event.getData().putString("networkInfoDetailedState",
+                            networkInfo.getDetailedState().name());
+                    event.getData().putString("networkInfoState", networkInfo.getState().name());
+                }
+                mEventCache.postEvent(event);
+            }
+        }
+    }
+
     public WifiManagerSnippet() {
         mContext = InstrumentationRegistry.getInstrumentation().getTargetContext();
         mWifiManager = mContext.getSystemService(WifiManager.class);
+        mConnectivityManager = mContext.getSystemService(ConnectivityManager.class);
         HandlerThread handlerThread = new HandlerThread(getClass().getSimpleName());
         handlerThread.start();
         mHandler = new Handler(handlerThread.getLooper());
@@ -260,6 +472,158 @@ public class WifiManagerSnippet extends WifiShellPermissionSnippet implements Sn
     }
 
     /**
+     * Adds a listener for WifiNetworkSuggestion connection status.
+     *
+     * @param callbackId A unique identifier assigned automatically by Mobly.
+     */
+    @AsyncRpc(description = "Adds a listener for WifiNetworkSuggestion connection status.")
+    public void wifiAddSuggestionConnectionStatusListener(String callbackId) {
+        if (mSuggestionConnectionStatusListener != null) {
+            throw new RuntimeException("Another SuggestionConnectionStatusListener is added. "
+                    + "Only one listener is supported.");
+        }
+        mSuggestionConnectionStatusListener =
+                new SuggestionConnectionStatusListener(callbackId);
+        mWifiManager.addSuggestionConnectionStatusListener(Executors.newSingleThreadExecutor(),
+                mSuggestionConnectionStatusListener);
+    }
+
+    /**
+     * Removes the WifiNetworkSuggestion connection status listener.
+     */
+    @Rpc(description = "Removes the WifiNetworkSuggestion connection status listener.")
+    public void wifiRemoveSuggestionConnectionStatusListener() {
+        if (mSuggestionConnectionStatusListener == null) {
+            Log.d(TAG, "No active SuggestionConnectionStatusListener.");
+            return;
+        }
+        mWifiManager.removeSuggestionConnectionStatusListener(
+                mSuggestionConnectionStatusListener);
+        mSuggestionConnectionStatusListener = null;
+        Log.d(TAG, "Removed SuggestionConnectionStatusListener.");
+    }
+
+    /**
+     * Adds a listener for WifiNetworkSuggestion user approval status.
+     *
+     * @param callbackId A unique identifier assigned automatically by Mobly.
+     */
+    @AsyncRpc(description = "Adds a listener for WifiNetworkSuggestion user approval status.")
+    public void wifiAddSuggestionUserApprovalStatusListener(String callbackId) {
+        if (mSuggestionUserApprovalStatusListener != null) {
+            throw new RuntimeException("Another SuggestionUserApprovalStatusListener is added. "
+                    + "Only one listener is supported.");
+        }
+        mSuggestionUserApprovalStatusListener =
+                new SuggestionUserApprovalStatusListener(callbackId);
+        mWifiManager.addSuggestionUserApprovalStatusListener(
+                Executors.newSingleThreadExecutor(), mSuggestionUserApprovalStatusListener);
+
+    }
+
+    /**
+     * Removes the WifiNetworkSuggestion user approval status listener.
+     */
+    @Rpc(description = "Removes the WifiNetworkSuggestion user approval status listener.")
+    public void wifiRemoveSuggestionUserApprovalStatusListener() {
+        if (mSuggestionUserApprovalStatusListener == null) {
+            Log.d(TAG, "No active SuggestionUserApprovalStatusListener.");
+            return;
+        }
+        mWifiManager.removeSuggestionUserApprovalStatusListener(
+                mSuggestionUserApprovalStatusListener);
+        mSuggestionUserApprovalStatusListener = null;
+        Log.d(TAG, "Removed SuggestionUserApprovalStatusListener.");
+    }
+
+    /**
+     * Adds a BroadcastReceiver for ACTION_WIFI_NETWORK_SUGGESTION_POST_CONNECTION.
+     *
+     * @param callbackId A unique identifier assigned automatically by Mobly.
+     */
+    @AsyncRpc(description = "Adds a BroadcastReceiver for "
+            + "ACTION_WIFI_NETWORK_SUGGESTION_POST_CONNECTION.")
+    public void wifiAddNetworkSuggestionPostConnectionReceiver(String callbackId) {
+        if (mNetworkSuggestionPostConnectionReceiver != null) {
+            throw new RuntimeException("Another NetworkSuggestionPostConnectionReceiver is added. "
+                    + "Only one receiver is supported");
+        }
+        mNetworkSuggestionPostConnectionReceiver =
+                new NetworkSuggestionPostConnectionReceiver(callbackId);
+        IntentFilter filter = new IntentFilter(
+                WifiManager.ACTION_WIFI_NETWORK_SUGGESTION_POST_CONNECTION);
+        mContext.registerReceiver(mNetworkSuggestionPostConnectionReceiver, filter);
+        Log.d(TAG, "Added NetworkSuggestionPostConnectionReceiver with ID: " + callbackId);
+    }
+
+    /**
+     * Removes the BroadcastReceiver for ACTION_WIFI_NETWORK_SUGGESTION_POST_CONNECTION.
+     */
+    @Rpc(description = "Removes the BroadcastReceiver for "
+            + "ACTION_WIFI_NETWORK_SUGGESTION_POST_CONNECTION.")
+    public void wifiRemoveNetworkSuggestionPostConnectionReceiver() {
+        if (mNetworkSuggestionPostConnectionReceiver == null) {
+            Log.d(TAG, "No active NetworkSuggestionPostConnectionReceiver.");
+            return;
+        }
+        mContext.unregisterReceiver(mNetworkSuggestionPostConnectionReceiver);
+        mNetworkSuggestionPostConnectionReceiver = null;
+        Log.d(TAG, "Removed NetworkSuggestionPostConnectionReceiver.");
+    }
+
+    /**
+     * Adds Wi-Fi network suggestion.
+     *
+     * @param jsonSuggestions A JSONArray of WifiNetworkSuggestion objects.
+     * @return The status of the operation, as defined by WifiManager.STATUS_*.
+     */
+    @Rpc(description = "Adds a list of Wi-Fi network suggestions.")
+    public int wifiAddNetworkSuggestions(JSONArray jsonSuggestions) throws JSONException {
+        List<WifiNetworkSuggestion> suggestions = new ArrayList<>();
+        for (int i = 0; i < jsonSuggestions.length(); i++) {
+            JSONObject jsonSuggestion = jsonSuggestions.getJSONObject(i);
+            suggestions.add(WifiAwareJsonDeserializer.jsonToWifiNetworkSuggestion(jsonSuggestion));
+        }
+        int status = mWifiManager.addNetworkSuggestions(suggestions);
+        Log.i(TAG, "Added network suggestion, status: " + status);
+        return status;
+    }
+
+    /**
+     * Removes Wi-Fi network suggestion.
+     *
+     * @param jsonSuggestions A JSONArray of WifiNetworkSuggestion objects to be removed.
+     * @return The status of the operation, as defined by WifiManager.STATUS_*.
+     */
+    @Rpc(description = "Removes a list of Wi-Fi network suggestions.")
+    public int wifiRemoveNetworkSuggestions(JSONArray jsonSuggestions) throws JSONException {
+        List<WifiNetworkSuggestion> suggestions = new ArrayList<>();
+        for (int i = 0; i < jsonSuggestions.length(); i++) {
+            JSONObject jsonSuggestion = jsonSuggestions.getJSONObject(i);
+            suggestions.add(WifiAwareJsonDeserializer.jsonToWifiNetworkSuggestion(jsonSuggestion));
+        }
+        int status = mWifiManager.removeNetworkSuggestions(suggestions);
+        Log.i(TAG, "Removed network suggestion, status: " + status);
+        return status;
+    }
+
+    /**
+     * Retrieves the list of network suggestions currently active from this app.
+     *
+     * @return A JSONArray of WifiNetworkSuggestion objects in JSON format.
+     */
+    @Rpc(description = "Retrieves the list of network suggestions currently active from this app.")
+    public JSONArray wifiGetNetworkSuggestions() throws JSONException {
+        List<WifiNetworkSuggestion> suggestions = mWifiManager.getNetworkSuggestions();
+        JSONArray jsonSuggestions = new JSONArray();
+        for (WifiNetworkSuggestion suggestion : suggestions) {
+            jsonSuggestions.put(WifiJsonConverter.serializeWifiNetworkSuggestion(suggestion));
+        }
+        Log.i(TAG, "Fetched " + suggestions.size() + " network suggestions.");
+        return jsonSuggestions;
+    }
+
+    /**
      * Enables all saved networks.
      */
     @Rpc(description = "Enable all saved networks.")
@@ -298,6 +662,17 @@ public class WifiManagerSnippet extends WifiShellPermissionSnippet implements Sn
     @Rpc(description = "Get current SoftApConfiguration.")
     public JSONObject wifiGetSoftApConfiguration() throws JSONException {
         return WifiJsonConverter.serialize(mWifiManager.getSoftApConfiguration());
+    }
+
+    /**
+     * Gets the Wi-Fi tethered AP Configuration.
+     *
+     * @return AP details in {@link SoftApConfiguration} as JSON format.
+     */
+    @Rpc(description = "Get current SApConfiguration.")
+    public JSONObject wifiGetSapConfiguration() throws JSONException {
+        return executeWithShellPermission(
+            () -> WifiJsonConverter.serialize(mWifiManager.getSoftApConfiguration()));
     }
 
     /**
@@ -382,7 +757,7 @@ public class WifiManagerSnippet extends WifiShellPermissionSnippet implements Sn
                         Log.d(TAG, "debug> NetworkCallback State changed called for " + eventName);
                     } else if (nInfo.getDetailedState().equals(DetailedState.CONNECTED)) {
                         String eventName = "WifiNetworkConnected";
-                        WifiInfo currentConnectionInfo = getConnectionInfo();
+                        WifiInfo currentConnectionInfo = wifiGetCurrentConnectionInfo();
                         SnippetEvent event = new SnippetEvent(mCallbackId, eventName);
                         event.getData().putString("SSID",
                                 WifiJsonConverter.trimQuotationMarks(
@@ -415,7 +790,13 @@ public class WifiManagerSnippet extends WifiShellPermissionSnippet implements Sn
         }
     }
 
-    private WifiInfo getConnectionInfo() {
+    /**
+     * Gets the current connected Wi-Fi information
+     *
+     * @return WifiInfo
+     */
+    @Rpc(description = "Gets the current connected Wi-Fi connection information.")
+    public WifiInfo wifiGetCurrentConnectionInfo() {
         return executeWithShellPermission(mWifiManager::getConnectionInfo);
     }
 
@@ -533,6 +914,24 @@ public class WifiManagerSnippet extends WifiShellPermissionSnippet implements Sn
     }
 
     /**
+     * Enables/disables Wi-Fi scan throttling.
+     */
+    @Rpc(description = "Enable/disable wifi scan throttling.")
+    public void wifiSetScanThrottleState(boolean enabled) {
+        ShellIdentityUtils.invokeWithShellPermissions(
+                () -> mWifiManager.setScanThrottleEnabled(enabled));
+    }
+
+    /**
+     * Gets Wi-Fi scan throttling state.
+     */
+    @Rpc(description = "Get Wi-Fi scan throttle state.")
+    public boolean wifiIsScanThrottleEnabled() {
+        return ShellIdentityUtils.invokeWithShellPermissions(
+            () -> mWifiManager.isScanThrottleEnabled());
+    }
+
+    /**
      * Scan listener passed to WiFiScanner APIs.
      *
      * <p>With different types of events triggered when executing WiFiScanner APIs, corresponding
@@ -611,7 +1010,7 @@ public class WifiManagerSnippet extends WifiShellPermissionSnippet implements Sn
         Log.d(TAG, "Got network config: " + jsonConfig);
         WifiConfiguration wifiConfig = JsonDeserializer.jsonToWifiConfig(jsonConfig);
         CountDownLatch latch = new CountDownLatch(1);
-        WifiInfo connectionInfo = getConnectionInfo();
+        WifiInfo connectionInfo = wifiGetCurrentConnectionInfo();
         if (connectionInfo.getNetworkId() != -1
                 && connectionInfo.getSSID().equals(wifiConfig.SSID)
                 && connectionInfo.getSupplicantState().equals(SupplicantState.COMPLETED)) {
@@ -645,7 +1044,7 @@ public class WifiManagerSnippet extends WifiShellPermissionSnippet implements Sn
 
         if (!Utils.waitUntil(
                 () -> {
-                    WifiInfo currentConnectionInfo = getConnectionInfo();
+                    WifiInfo currentConnectionInfo = wifiGetCurrentConnectionInfo();
                     return currentConnectionInfo.getNetworkId() != -1
                         && currentConnectionInfo.getSSID().equals(wifiConfig.SSID)
                         && currentConnectionInfo.getSupplicantState().equals(
@@ -656,9 +1055,104 @@ public class WifiManagerSnippet extends WifiShellPermissionSnippet implements Sn
                 "Failed to connect to '"
                     + jsonConfig
                     + "', timeout! Current connection: '"
-                    + getConnectionInfo().getSSID()
+                    + wifiGetCurrentConnectionInfo().getSSID()
                     + "'",
                 null);
+        }
+    }
+
+    /**
+   * Toggles WiFi on and off.
+   *
+   * @param enabled {@code true} to turn on, {@code false} to turn off
+   */
+    @Rpc(description = "Toggle WiFi on and off.")
+    public void wifiToggleState(boolean enabled) throws WifiManagerSnippetException {
+        int expectedWifiState =
+                enabled ? WifiManager.WIFI_STATE_ENABLED : WifiManager.WIFI_STATE_DISABLED;
+
+        if (mWifiManager.getWifiState() == expectedWifiState) {
+            return;
+        }
+
+        int wifiStateNeededToWait =
+                enabled ? WifiManager.WIFI_STATE_DISABLING : WifiManager.WIFI_STATE_ENABLING;
+        if (mWifiManager.getWifiState() == wifiStateNeededToWait) {
+            if (!Utils.waitUntil(
+                    () -> mWifiManager.getWifiState() == WifiManager.WIFI_STATE_DISABLED,
+                    TOGGLE_STATE_TIMEOUT_IN_SEC)) {
+                Log.e(TAG, "Wi-Fi failed to stabilize after "
+                        + TOGGLE_STATE_TIMEOUT_IN_SEC + "s.");
+            }
+        }
+
+        if (!executeWithShellPermission(() -> mWifiManager.setWifiEnabled(enabled))) {
+            throw new WifiManagerSnippetException(
+            "Failed to initiate toggling Wi-Fi to " + enabled, null);
+        }
+        if (!Utils.waitUntil(
+                () -> mWifiManager.getWifiState()
+                == expectedWifiState, TOGGLE_STATE_TIMEOUT_IN_SEC)) {
+            throw new WifiManagerSnippetException(
+            "Failed to toggle Wi-Fi to "
+                + enabled
+                + "after "
+                + TOGGLE_STATE_TIMEOUT_IN_SEC
+                + "s timeout",
+            null);
+        }
+    }
+
+    /** Turns on Wi-Fi. */
+    @Rpc(description = "Turn on Wi-Fi.")
+    public void wifiToggleEnable() throws InterruptedException, WifiManagerSnippetException {
+        wifiToggleState(true);
+    }
+
+    /** Turns off Wi-Fi. */
+    @Rpc(description = "Turn off Wi-Fi.")
+    public void wifiToggleDisable() throws InterruptedException, WifiManagerSnippetException {
+        wifiToggleState(false);
+    }
+
+    /** Start scan, wait for scan to complete, and return results. */
+    @Rpc(
+            description =
+                "Start scan, wait for scan to complete, and return results, which is a list of "
+                + "serialized WifiScanResult objects.")
+    public JSONArray wifiScanAndGetResultsWithShellPermission()
+            throws InterruptedException, JSONException, WifiManagerSnippetException {
+        WifiScanReceiver receiver = new WifiScanReceiver();
+        mContext.registerReceiver(
+                receiver, new IntentFilter(WifiManager.SCAN_RESULTS_AVAILABLE_ACTION));
+
+        try {
+            mIsScanResultAvailable = false;
+            if (!executeWithShellPermission(() -> mWifiManager.startScan())) {
+                throw new WifiManagerSnippetException("Failed to initiate Wi-Fi scan.", null);
+            }
+            if (!Utils.waitUntil(() -> mIsScanResultAvailable, 2 * 60)) {
+                throw new WifiManagerSnippetException(
+                    "Failed to get scan results after 2min, timeout!", null);
+            }
+
+            JSONArray results = new JSONArray();
+            for (ScanResult result : mWifiManager.getScanResults()) {
+                results.put(WifiAwareSnippetConverter.serializeScanResult(result));
+            }
+            return results;
+        } finally {
+            mContext.unregisterReceiver(receiver);
+        }
+    }
+
+    private class WifiScanReceiver extends BroadcastReceiver {
+        @Override
+        public void onReceive(Context c, Intent intent) {
+            String action = intent.getAction();
+            if (!action.equals(WifiManager.SCAN_RESULTS_AVAILABLE_ACTION)) return;
+            if (!intent.getBooleanExtra(WifiManager.EXTRA_RESULTS_UPDATED, false)) return;
+            mIsScanResultAvailable = true;
         }
     }
 }
